<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/register_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/register_subtitle"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="#DD7A7878"
        android:layout_marginBottom="10dp"
        />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="450dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    style="@style/TextViewRegister"
                    android:hint="Please enter your mail."
                    android:id="@+id/register_mail"/>
                <EditText
                    style="@style/TextViewRegister"
                    android:hint="@string/register_name"
                    android:id="@+id/register_name"/>
                <EditText
                    style="@style/TextViewRegister"
                    android:hint="@string/register_surname"
                    android:id="@+id/register_surname"/>
                <EditText
                    style="@style/TextViewRegister"
                    android:hint="@string/register_studies"
                    android:id="@+id/register_studies"/>
                <EditText
                    style="@style/TextViewRegister"
                    android:hint="@string/register_direcction"
                    android:id="@+id/register_direcction"/>
                <EditText
                    android:id="@+id/register_description"
                    style="@style/TextViewRegister"
                    android:layout_height="78dp"
                    android:hint="@string/register_description" />
                <EditText
                    style="@style/PasswordRegister"
                    android:hint="@string/register_password"
                    android:id="@+id/register_password"/>

            </LinearLayout>
        </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="100px"
        android:background="@drawable/round_back_green_15"
        android:text="Create Account"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:id="@+id/createAccountBtn"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_haveAccount"
            android:textColor="#DDBAB8B8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/primary"
            android:text="Sign in"
            android:id="@+id/register_singinBtn"/>
    </LinearLayout>

</LinearLayout>
