<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home_title"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_info1"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:justificationMode="inter_word"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_info2"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:justificationMode="inter_word"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_info3"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:justificationMode="inter_word"/>


</LinearLayout>